links added to buttons and spacing fixed on desktop in section 5

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -291,6 +291,19 @@
     main > section:first-child > div:first-child > div > h1 {
         font-size: 1.7em;
     }
+
+
+    main > section:nth-child(5) > div:first-child > div:first-child, main > section:nth-child(5) > div:nth-child(3) > div {
+        padding: 0.2em 1em 0.2em 0;
+    }
+    main > section:nth-child(5) > div:first-child > div:nth-child(2), main > section:nth-child(5) > div:nth-child(3)  > img {
+        padding: 0.2em 0 0.2em 1em;
+    }
+    
+
+
+
+
     main > section:nth-child(17) > div > p.uppercase {
         font-size: 1.75em;
     }
